<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">weatherapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="beijing">北京</string>
    <string name="tianjing">天津</string>
    <string name="shanghai">上海</string>
    <string name="congqing">重庆</string>
    <string name="shengyang">沈阳</string>
    <string name="dalian">大连</string>
    <string name="changcun">长春</string>
    <string name="haerbin">哈尔滨</string>
    <string name="zhengzou">郑州</string>
    <string name="wuhan">武汉</string>
    <string name="changsha">长沙</string>
    <string name="guangzou">广州</string>
    <string name="hefei">合肥</string>
    <string name="shenzen">深圳</string>
    <string name="nanjing">南京</string>
    <string name="xian">西安</string>
    <string name="wuxi">无锡</string>
    <string name="changzou">常州</string>
    <string name="shuzou">苏州</string>
    <string name="hangzou">杭州</string>
    <string name="ningbo">宁波</string>
    <string name="jinan">济南</string>
    <string name="qingdao">青岛</string>
    <string name="fuzou">福州</string>
    <string name="xiamen">厦门</string>
    <string name="chengdu">成都</string>
    <string name="kunming">昆明</string>
    <string name="taian">泰安</string>
    <string name="text_begin">请开始说话…</string>

</resources>
